# fake_cmd

./: README.md  client_start.py  pyproject.toml  server_start.py
fake_cmd/: __init__.py  cli.py
fake_cmd/core/: __init__.py  client.py  server.py
fake_cmd/utils/: __init__.py  cmd_arg.py  comm.py  common.py  exception.py  file.py  logging.py  parallel.py
fake_cmd/utils/executors/: __init__.py  reader.py  writer.py
