[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fake_cmd"
version = "0.0.7.post1"
description = "fake_cmd provides a simulated remote command line based on file communication to send commands from the client to the server for execution."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Slymer-Tech", email = "liuzikang0625@gmail.com" },
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Slymer-Tech/fake_cmd"

[tool.setuptools.packages.find]
include = ["fake_cmd", "fake_cmd.*"]
