[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fake_cmd"
version = "0.0.8"
description = "fake_cmd provides a simulated remote command line based on file communication to send commands from the client to the server for execution."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Slymer-Tech", email = "liuzikang0625@gmail.com" },
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Slymer-Tech/fake_cmd"

[project.scripts]
fake-cmd-client = "fake_cmd.cli:client_main"
fake-cmd-server = "fake_cmd.cli:server_main"

[tool.setuptools.packages.find]
include = ["fake_cmd", "fake_cmd.*"]
